@startuml Class_Diagram_UML
skinparam style strictuml
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.2
skinparam ArrowColor #red
hide empty members


package View
{
    class GraphicUI
    {
        'association with Controller
        'association with GamePanel
        +UpdateUI(): void
    }
    GraphicUI "1" -- "1" Controller
    GraphicUI "1" -- "1" GamePanel


    class GamePanel
    {
        -eastPanel : JPanel
        'association with BoardPanel
        'association with Controller 
        'association with InfoBoxPanel
        'aggregation from PlayerPane
        +UpdateGameUI(): void
    }
    GamePanel "1" -- "1" Controller
    GamePanel "1" --o "2" PlayerPanel : consists of
    GamePanel "1" -- "1" InfoBoxPanel: consists of
    GamePanel "1" -- "1" BoardPanel : consists of


    class BoardPanel
    {
        -pawns : Image[]
        -x : double
        -y : double
        'aggregation from TilePanel
        'association with TilePanel
        'dependency from Controller
        +BoardPanel(controller : Controller)
        +UpdateJackpot(jackpot:double) : void
        +UpdatePawns() : void
        +paint(g : Graphics) : void
    }
    BoardPanel "1" -- "1" TilePanel : consists of
    BoardPanel "1" --o "31" TilePanel : consists of
    BoardPanel "1" --* Controller


    class PlayerPanel
    {
        'dependency from OptionDialog
        -playerText: JLabel
        +moneyText : JLabel
        +loanText  : JLabel
        +billsText : JLabel
        
        rollDieButton : JButton
        myDealCardsButton : JButton
        getLoanButton : JButton
        endTurnButton : JButton
        
        -imageURL : URL
        -diceImage : JLabel

        'association with player
        'association with controller
        +UpdatePlayerUI(money,loans,bills : double) : void

        +PlayerPanel(player : Player, controller : Controller)
        -SetController(controller: Controller) : void
        +GetController() : Controller

        -SetPlayer(player : Player) : void
        +GetPlayer() : Player

    }
    PlayerPanel --> Player
    PlayerPanel --> Controller
    PlayerPanel --* OptionDialog

    class TilePanel
    {
        text : JLabel
        image : JLabel

        'dependency from Tile
        TilePanel(tile : Tile)
    }
    TilePanel --* Tile

    class InfoBoxPanel
    {
        -duration : JLabel
        -turn : JLabel

        deal : JButton
        mail : JButton

        +UpdateInfoUI(duration,turn:int ,task:String) : void
        +GetTurnLabel() : JLabel
        'dependency from Controller
        InfoBoxPanel(controller: Controller)
        'dependency from OptionDialog
    }
    InfoBoxPanel ..* OptionDialog
    InfoBoxPanel ..* Controller

    class OptionDialog
    {
        -option : int
        +OptionDialog(title,text,op1,op2 : String, imageName : String)
        +GetOption() : int
    }
}
@enduml